<resources>
    <string name="app_name">TCP客户端</string>
    <string name="title">TCP客户端</string>
    <string name="send">发送</string>
    <string name="send_file">文件</string>
    <string name="configuration">修改配置</string>
    <string name="sey_switch">切换通讯模式</string>
    <string name="inputHint">输入要发送的内容</string>
    <string name="configurationIp">例如:192.169.1.133</string>
    <string name="configurationPort">例如:8080</string>
    <string name="startLink">开始连接</string>
    <string name="inputPort">请输入端口号</string>
    <string name="inputIp">请输入IP地址</string>
    <string name="tcpLink">TCP</string>
    <string name="udpLink">UDP</string>
</resources>