<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <include layout="@layout/nav_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/msg_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/inputHint"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/send_file"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/setbut_bac"
            android:text="@string/send_file"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/send"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/setbut_bac"
            android:text="@string/send"
            android:textAllCaps="false"/>
        <!-- textAllCaps="false"表示关掉文本字母全部大写方法 -->
    </LinearLayout>
</LinearLayout>
